--- a/android/app/src/main/res/layout/item_message_user.xml
+++ b/android/app/src/main/res/layout/item_message_user.xml
@@ -5,7 +5,7 @@
     android:paddingVertical="4dp">
 
     <TextView
-        android:id="@+id/messageText"
+        android:id="@+id/txt_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
