--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_chat"
-        android:icon="@android:drawable/ic_menu_send"
-        android:title="@string/nav_chat" />
+        android:id="@+id/nav_feed"
+        android:icon="@drawable/ic_feed"
+        android:title="Feed" />
     <item
         android:id="@+id/nav_spots"
-        android:icon="@android:drawable/ic_menu_mapmode"
-        android:title="@string/nav_spots" />
+        android:icon="@drawable/ic_spots"
+        android:title="Spots" />
     <item
         android:id="@+id/nav_classifieds"
-        android:icon="@android:drawable/ic_menu_agenda"
-        android:title="@string/nav_classifieds" />
+        android:icon="@drawable/ic_classifieds"
+        android:title="Comprar" />
+    <item
+        android:id="@+id/nav_chat"
+        android:icon="@drawable/ic_chat"
+        android:title="KiteBot" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="@string/nav_profile" />
+        android:icon="@drawable/ic_profile"
+        android:title="Perfil" />
 </menu>
