--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#0288D1</color>
-    <color name="primary_dark">#01579B</color>
-    <color name="accent">#00BCD4</color>
-    <color name="background">#F5F5F5</color>
-    <color name="text_primary">#212121</color>
-    <color name="text_secondary">#757575</color>
-    <color name="message_user">#0288D1</color>
-    <color name="message_bot">#FFFFFF</color>
+    <color name="primary">#0066CC</color>
+    <color name="primary_dark">#004C99</color>
+    <color name="accent">#00CC88</color>
+    <color name="background">#121212</color>
+    <color name="surface">#1E1E1E</color>
+    <color name="text_primary">#FFFFFF</color>
+    <color name="text_secondary">#B0B0B0</color>
+    <color name="divider">#333333</color>
     <color name="white">#FFFFFF</color>
-    <color name="ic_launcher_background">#0288D1</color>
+    <color name="black">#000000</color>
+    <color name="whatsapp">#25D366</color>
+    <color name="error">#FF5252</color>
+    <color name="warning">#FFC107</color>
+    <color name="message_bot">#2A2A2A</color>
+    <color name="message_user">#0066CC</color>
+    <color name="ic_launcher_background">#0066CC</color>
 </resources>
