🚀 Rebrand to KiteMe v3.0 + Bilingual support
Major changes:
- Renamed app from KiteSurf Brasil to KiteMe
- New package name: com.kiteme.app
- Full bilingual support (PT-BR / English)
- Language selection on first launch
- Settings screen for language change
- Updated all strings to use string resources
- New keystore for signing (kiteme-release.keystore)
- Updated Play Store documentation
- Privacy Policy in both languages
- Version 3.0 (versionCode 4)
- APK/AAB signed and ready for Play Store

Features:
- Automatic system language detection
- In-app language switching
- All UI elements localized
- Voice recognition adapts to selected language
- TTS adapts to selected language

--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
     <item
         android:id="@+id/nav_feed"
         android:icon="@drawable/ic_feed"
-        android:title="Feed" />
+        android:title="@string/nav_feed" />
     <item
         android:id="@+id/nav_spots"
         android:icon="@drawable/ic_spots"
-        android:title="Spots" />
+        android:title="@string/nav_spots" />
     <item
         android:id="@+id/nav_classifieds"
         android:icon="@drawable/ic_classifieds"
-        android:title="Comprar" />
+        android:title="@string/nav_classifieds" />
     <item
         android:id="@+id/nav_chat"
         android:icon="@drawable/ic_chat"
-        android:title="KiteBot" />
+        android:title="@string/nav_chat" />
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Perfil" />
+        android:title="@string/nav_profile" />
 </menu>
