--- a/android/app/src/main/res/layout/fragment_feed.xml
+++ b/android/app/src/main/res/layout/fragment_feed.xml
@@ -19,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="🏄 KiteSurf Brasil"
+            android:text="🏄 KiteMe"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textStyle="bold" />
