feat: update app icons with new KiteMe branding

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="warning">#FFC107</color>
     <color name="message_bot">#2A2A2A</color>
     <color name="message_user">#0066CC</color>
-    <color name="ic_launcher_background">#0066CC</color>
+    <color name="ic_launcher_background">#F8F9FA</color>
 </resources>
